tests/typing/good/extra-type-shadow1.scala
class U[V] {}
class T[+A](a : A) {
   def m[U](x : U) : U = x
}
object Main {
    def main(args: Array[String]) { }
}
