tests/typing/bad/testfile-context_return-1.scala
class A { def m() { return x } }
object Main { def main(args: Array[String]) { } }
